# EssaLang

./: .clang-format  CMakeLists.txt  Int_range_checking.md  README.md  TODO  run-tests  run-tests.py
bootstrap/: CMakeLists.txt  Codegen.cpp  Codegen.hpp  Esl.cpp  Esl.hpp  Lexer.cpp  Lexer.hpp  Parser.cpp  Parser.hpp  Typechecker.cpp  Typechecker.hpp  main.cpp
docs/: Int_range_checking.md  ObjectModel.md
lib/: prelude.esl
runtime/: Buffer.cpp  Buffer.hpp  Builtins.cpp  Builtins.hpp  CMakeLists.txt  Checked.hpp  Config.hpp  Error.hpp  UString.cpp  UString.hpp  Utf8.cpp  Utf8.hpp
rust/: .clangd  Cargo.toml  build-runtime.sh  hello_world  hello_world.c
rust/runtime/: CMakeLists.txt
rust/runtime/include/: esl_header.h
rust/runtime/include/prelude/: buffer.h  config.h  file.h  fmt.h  iter.h  ops.h  panic.h  rc.h  string.h  test.h  types.h
rust/runtime/include/std/: io.h
rust/runtime/src/: esl_header.cpp
rust/runtime/src/prelude/: buffer.cpp  file.cpp  fmt.cpp  iter.cpp  ops.cpp  panic.cpp  rc.cpp  string.cpp  test.cpp
rust/runtime/src/std/: io.cpp
rust/src/: codegen.rs  compiler.rs  error.rs  lexer.rs  main.rs  parser.rs  sema.rs  types.rs
samples/: brainfuck.esl  file_read.esl
samples/sdl/: build.sh
tests/: brainfuck.esl  brainfuck.esl.err  brainfuck.esl.out  fibonacci.esl  hello_world.esl
tests/arrays/: array_index_not_int.esl  array_index_not_int.esl.cerr  array_index_not_int.esl.err  basic.esl  default_init.esl  index_on_rvalue.esl  index_operator.esl  index_operator_oob.esl  index_operator_oob.esl.err  index_operator_write.esl  index_operator_write.esl.out  index_operator_write_to_readonly.esl  index_operator_write_to_readonly.esl.cerr  index_operator_write_to_readonly.esl.err  multidimensional.esl  slices.esl  slices_out_of_range.esl  slices_out_of_range.esl.err  slices_partial.esl  slices_partial.esl.out
tests/control/: break.esl  break2.esl  break_not_in_loop.esl.cerr  continue.esl  continue.esl.out  continue_not_in_loop.esl  continue_not_in_loop.esl.cerr  for.esl  for_not_range.esl  for_not_range.esl.cerr  for_not_range.esl.err  for_not_range.esl.out  if.esl  if_dont_allow_assignments.esl  if_dont_allow_assignments.esl.cerr  if_dont_allow_assignments.esl.err  if_else.esl  if_else.esl.out  if_non_bool_condition.esl  if_non_bool_condition.esl.cerr  if_non_bool_condition.esl.err  while.esl  while.esl.out
tests/expressions/: arithmetic.esl  arithmetic.esl.out  assignment.esl  assignment.esl.out  assignment_bool.esl  boolean.esl  boolean.esl.out  can_be_discarded.esl  can_be_discarded.esl.cerr  can_be_discarded.esl.err  comparison.esl  comparison.esl.out  logical.esl  logical.esl.out  logical_not_bool.esl  logical_not_bool.esl.cerr  logical_not_bool.esl.err  logical_short_circuiting.esl  logical_short_circuiting.esl.out  parens.esl  precedence.esl  range.esl  range.esl.out  range_not_int.esl  range_not_int.esl.cerr  range_not_int.esl.err
tests/functions/: multiple_parameters.esl  passing_argument_of_invalid_type.esl  passing_argument_of_invalid_type.esl.cerr  passing_argument_of_invalid_type.esl.err  procedures.esl  recursion.esl  with_parameters.esl  with_parameters.esl.out
tests/imports/: a.esl  basic.esl  basic.esl.out  error_in_module.esl  error_in_module.esl.cerr  invalid_module.esl  unparseable_module.esl
tests/memory/: drop_basic.esl  drop_basic.esl.out
tests/stdlib/: buffer.esl  buffer.esl.out  file_read_to_buf.esl  file_read_to_buf.esl.out  input.esl
tests/structs/: basic.esl  basic.esl.out  extern.esl  extern_funcs.esl  extern_literal.esl  extern_literal.esl.cerr  legacy_struct_init_from_empty_array.esl  legacy_struct_init_from_empty_array.esl.cerr  method_outside_struct.esl  method_outside_struct.esl.cerr  method_outside_struct.esl.err  method_same_name_as_function.esl  method_same_name_as_function.esl.out  methods.esl  methods.esl.out  missing_init_field.esl  missing_init_field.esl.cerr  nonexistent_field.esl  nonexistent_field.esl.cerr  nonexistent_field.esl.err  nonexistent_init_field.esl  nonexistent_init_field.esl.cerr  returning_struct.esl  static_method.esl  struct_literal_arg.esl  struct_literal_return.esl
tests/syntax/: declarations.esl  expr_list_not_closed.esl  expr_list_not_closed.esl.cerr  expr_list_not_closed.esl.err  expr_list_not_closed_func.esl  expr_list_not_closed_func.esl.cerr  nested_postfix.esl  nested_postfix.esl.cerr  nested_postfix.esl.err  nested_postfix_simple.esl  nested_postfix_simple.esl.cerr
tests/typechecker/: invalid_return_in_void_func.esl  invalid_return_in_void_func.esl.cerr  invalid_return_void_in_nonvoid_func.esl  invalid_return_void_in_nonvoid_func.esl.cerr  member_access_on_invalid_type.esl  member_access_on_invalid_type.esl.cerr  member_access_on_nonstruct.esl  member_access_on_nonstruct.esl.cerr  member_access_on_nonstruct.esl.err  missing_function_arg.esl  missing_function_arg.esl.cerr  missing_return_stmt.esl  missing_return_stmt.esl.cerr  missing_return_stmt_if.esl  mutating_const.esl  (+32 more)
(+52 files in other folders)
